# Yorznab

./: .env.demo  .gitignore  Development.md  LICENSE  README.md  app.py  build.ps1  build.sh  docker-compose.yml  pyproject.toml  run.ps1  run.sh  setup.ps1  setup.sh
config/: app.yaml.sample  feed.yaml.demo  feed.yaml.sample  filters.yaml.sample  keys.yaml.format  keys.yaml.sample  settings.yaml.demo  settings.yaml.sample  yorznab.yaml.demo  yorznab.yaml.sample
config/feeds/: feed.yaml.yaml.json
scripts/: console.ps1  console.sh  run.ps1  run.sh
server/: __init__.py  requirements.txt  run.py
server/cron/: rssrefresh.py
server/routers/: handler.py  login.py  status.py  torznab.py  webhook.py
server/rss/: AppClient.py  ArrClient.py  FeedGenerator.py  QBitClient.py  QBitFilter.py  Seerr.py  SeerrClient.py  builder.py
server/static/: login.css
server/static/css/: applications.css  credentials.css  feeds.css  setup.css  web-dark.css  web-light.css  web.css
server/static/js/: auth.js  credentials.js  editor.js  feed.js  feeds-gui.js  feeds.js  terminal copy.js  terminal.js  theme.js  web.js
server/terminal/: factory.py  iwebsetup.py  terminal.py  unix.py  windows.py
server/utils/: config.py  customlogger.py  docs.py  feedconfig.py  feedfile.py  filelock.py  json_editor.py  keystore.py  settings.py  timeformatter.py  timezoneaware.py
server/web/: common.py  guifier.py
server/web/routers/: __init__.py  applications.py  auth.py  cache.py  configuration.py  credentials.py  feeds.py  home.py
server/web/websocket/: factory.py  iwebsetup.py  unix.py  websocket copy.py  windows.py
