[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Yorznab"
version = "1.0"
description = "... a Torznab indexer that's all YORZ"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedgen",
    "fastapi",
    "uvicorn",
    "psutil",
    "httpx",
    "pyyaml",
    "dacite",
    "croniter",
    "tzdata",
    "websockets",
    "dotenv",
    'pywinpty; sys_platform == "win32"',  # Only installs on Windows
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server"]

[tool.setuptools]
py-modules = ["app"]

[project.scripts]
yorznab = "app:start"
